--- a/src/main/resources/dkvs.properties
+++ b/src/main/resources/dkvs.properties
@@ -1,4 +1,6 @@
 node.1 = localhost:5454
 node.2 = localhost:5455
 node.3 = localhost:5456
-timeout = 10000
+node.4 = localhost:5457
+node.5 = localhost:5458
+timeout = 4000
