--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'application'
 
 sourceCompatibility = 1.5
 version = '1.0'
@@ -26,3 +27,7 @@ dependencies {
 sourceSets {
     main.java.srcDirs += 'src/main/kotlin'
 }
+
+mainClassName = "ru.ifmo.ctddev.igushkin.dkvs.Runner"
+applicationName = "dkvs_node"
+applicationDefaultJvmArgs = ['''-Djava.util.logging.SimpleFormatter.format=%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %5$s%6$s%n''']
